--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 			</div> <!-- end div class="game-div" -->
 
 			<footer></footer>
-		</div>
+		</div> <!-- end div class="container" -->
 	</body>
 </html>
