--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				<button class="btn-start">
 					Start
 				</button>
-			</div> <!-- end div class="game-div" -->
+			</div> 
 
 			<footer></footer>
-		</div> <!-- end div class="container" -->
+		</div>
 	</body>
 </html>
